[package]
name = "qjs-sys"
version = "0.1.0"
edition = "2021"

[profile.release-d]
inherits = "release"
debug = true

[lib]
crate-type = ['rlib']

[dependencies]
scopeguard = { version = "1.1.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.63"

[features]
with-polyfills = []
sanitize-address = []

