[package]
name = "qjs-extensions"
version = "0.1.0"
edition = "2021"


[dependencies]
qjs = { package = "qjsbind", version = "0.1.0", default-features = false, path = "../qjsbind" }
base64 = { version = "0.21", optional = true, default-features = false, features = ["alloc"] }
sha1 = { version = "0.10", optional = true, default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }
sha3 = { version = "0.10", optional = true, default-features = false }
blake2 = { version = "0.10", optional = true, default-features = false }
md5 = { version = "0.7", optional = true, default-features = false }
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }
hex_fmt = { version = "0.3", optional = true, default-features = false }
parity-scale-codec = { version = "3.0", optional = true, default-features = false }
chumsky = { version = "1.0.0-alpha.4", optional = true, default-features = false }
tinyvec_string = { version = "0.3.2", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["base64", "sha1", "sha2", "sha3", "blake2", "std", "hex", "scale"]
hex = ["dep:hex", "hex_fmt"]
std = [
    "qjs/std",
    "base64/std",
    "parity-scale-codec/std",
]
scale = [
    "parity-scale-codec",
    "chumsky",
    "tinyvec_string",
]
