[package]
name = "qjs-sys"
version = "0.1.0"
edition = "2021"

[profile.release-d]
inherits = "release"
debug = true

[lib]
crate-type = ['rlib']

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.63"

[features]
std = []
with-polyfills = []
sanitize-address = []
classic-host-call = []
stream = []
