[package]
name = "qjsbind-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.30"
template-quote = "0.3"
syn = { version = "2.0.66", features = ["full"] }
proc-macro-crate = "3.1.0"
itertools = "0.13.0"
quote = "1.0.36"

[dev-dependencies]
insta = "1"
rustfmt-snippet = "0.1.2"

