[package]
name = "qjsbind"
version = "0.1.0"
edition = "2021"

[dependencies]
qjs-sys = { path = "../qjs-sys" }
qjsbind-derive = { path = "../qjsbind-derive" }

hex = { version = "0.4", default-features = false, features = ["alloc"] }
cstr = "0.2"
tinyvec = { version = "1", default-features = false, features = ["alloc"] }
scopeguard = { version = "1", default-features = false }
tynm = "0.1.8"

[features]
default = ["std"]
std = []
with-polyfills = ["qjs-sys/with-polyfills"]
sanitize-address = ["qjs-sys/sanitize-address"]
stream = ["qjs-sys/stream"]
treat-hex-as-bytes = []
