[package]
name = "qjsbind"
version = "0.1.0"
edition = "2021"

[dependencies]
qjs-sys = { path = "../qjs-sys" }
qjsbind-derive = { path = "../qjsbind-derive" }

hex = { version = "0.4", default-features = false, features = ["alloc"] }
cstr = "0.2"
tinyvec = { version = "1", default-features = false, features = ["alloc"] }
scopeguard = { version = "1", default-features = false }
tynm = { version = "0.1.8", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["std"]
std = []
with-polyfills = ["qjs-sys/with-polyfills"]
sanitize-address = ["qjs-sys/sanitize-address"]
treat-hex-as-bytes = []
pink-allocator = ["qjs-sys/pink-allocator"]
json = ["dep:serde_json"]
